--- a/public/assets/clients/css/custom.css
+++ b/public/assets/clients/css/custom.css
@@ -11,4 +11,35 @@ display: inline-block;
     border: 4px solid #ddd;
     cursor: pointer;
 }
+.category-filter.active{
+    color: var(--ltn__secondary-color);
+    font-weight: bold;
+    text-decoration: underline;
+}
 
+/* CUSTOM CON XOAY */
+
+#loading-spinner{
+    display: flex;
+    align-items: center;
+    justify-self: center;
+    display: none;
+}
+.loader {
+    border: 5px solid;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: rotataion 1s linear infinite;
+    display: inline-block   ;
+    box-sizing: border-box;
+    border-color:   var(--ltn__secondary-color) transparent var(--ltn__secondary-color) transparent;
+}
+@keyframes rotataion {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
