--- a/public/assets/clients/css/custom.css
+++ b/public/assets/clients/css/custom.css
@@ -56,3 +56,11 @@
     align-items: center;
     margin: 10px 0;
 }
+
+/* Tìm kiếm giọng nói */
+#voice-search {
+    position: absolute;
+    right: 50px;
+    top: 20%;
+    text-align: center;
+}
