--- a/public/assets/admin/css/custom.css
+++ b/public/assets/admin/css/custom.css
@@ -22,3 +22,18 @@
     padding: 10px;
     border-radius: 5px;
 }
+.image-category{
+    width: 80px;
+    height: 80px;
+    
+   
+}
+.btn-update-category{
+color: green !important
+}
+.btn-delete-category{
+color: red !important
+}
+.category-image{
+    display: none;
+}
