tạo trang quản ly sản phẩm với các chức năng thêm, sửa, và hiển thị danh sách sản phẩm

--- a/public/assets/admin/css/custom.css
+++ b/public/assets/admin/css/custom.css
@@ -9,7 +9,7 @@
     text-align: center;
     margin: 10px 0;
 }
-#category-image{
+#category-image, #product-images{
     display: none;
 }   
 
@@ -35,5 +35,14 @@ color: green !important
 color: red !important
 }
 .category-image{
+    display: none;
+}
+.btn-update-product{
+color: green !important
+}
+.btn-delete-product{
+color: red !important
+}
+.product-images{
     display: none;
 }
