làm chức năng cập nhật thông tin sản phẩm trong trang quản trị admin.

--- a/public/assets/admin/css/custom.css
+++ b/public/assets/admin/css/custom.css
@@ -46,3 +46,9 @@ color: red !important
 .product-images{
     display: none;
 }
+.image-preview-listproduct{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    margin-top: 10px;
+    gap: 10px;
+}
