xây dựng trang quản lý biến thể, xem chi tiết đơn hàng, địa chỉ giao hàng

--- a/public/assets/admin/css/custom.css
+++ b/public/assets/admin/css/custom.css
@@ -52,3 +52,7 @@ color: red !important
     margin-top: 10px;
     gap: 10px;
 }
+.custom-badge{
+    padding: 4px 8px;
+    border-radius: 10px;
+}
