xây dựng chức năng xem chi tiết đơn hàng và hoá đơn

--- a/public/assets/admin/css/custom.css
+++ b/public/assets/admin/css/custom.css
@@ -56,3 +56,8 @@ color: red !important
     padding: 4px 8px;
     border-radius: 10px;
 }
+.image-payment{
+    width: 80px;
+    height: auto;
+    margin-right: 10px;
+}
