--- a/public/assets/clients/css/products-custom.css
+++ b/public/assets/clients/css/products-custom.css
@@ -245,6 +245,7 @@
     text-align: center;
     background: #fff;
     transition: all 0.3s;
+    object-fit: contain;
 }
 
 .product-card:hover {
@@ -255,7 +256,7 @@
 .product-card img {
     width: 100%;
     height: 280px;
-    object-fit: cover;
+    object-fit: contain;
     margin-bottom: 15px;
 }
 
